// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Renders with active className 1`] = `
<a
  class="text-primary-500 dark:text-primary-500"
  href="/#"
>
  Children
</a>
`;

exports[`<Link /> Renders with children 1`] = `
<a
  class=""
  href="/#"
>
  Children
</a>
`;
